feat: auth + roles
