# src/main/kotlin/com/example/software_systems_business_logic_lab1/application/dto/AuthRequestDto.kt
@@ -1,0 +1,6 @@
+package com.example.software_systems_business_logic_lab1.application.dto
+
+data class AuthRequestDto(
+    var username: String,
+    var password: String
+)
