# src/main/resources/static/openapi.yaml
@@ -6,6 +6,9 @@ info:
 servers:
   - url: 'http://localhost:8080'
 
+security:
+  - BearerAuth: []
+
 paths:
 
   #Cart
@@ -13,6 +16,8 @@ paths:
     get:
       summary: Get cart by id
       operationId: getCart
+      security:
+        - BearerAuth: []
       parameters:
         - name: cartId
           in: path
@@ -28,6 +33,8 @@ paths:
     delete:
       summary: Delete product from cart
       description: Deletes product from cart by id
+      security:
+        - BearerAuth: []
       parameters:
         - name: cartId
           in: path
@@ -49,6 +56,8 @@ paths:
     patch:
       summary: Decrements product in cart
       description: Decrements product in cart by id
+      security:
+        - BearerAuth: []
       parameters:
         - name: cartId
           in: path
@@ -70,6 +79,8 @@ paths:
     patch:
       summary: Increments product in cart
       description: Increments product in cart by id
+      security:
+        - BearerAuth: []
       parameters:
         - name: cartId
           in: path
@@ -91,6 +102,8 @@ paths:
     post:
       summary: Add product to cart
       description: Adds product to cart by id
+      security:
+        - BearerAuth: []
       parameters:
         - name: cartId
           in: path
@@ -113,6 +126,8 @@ paths:
     post:
       summary: "Create order"
       description: "Creates order by cart id with chosen products from cart"
+      security:
+        - BearerAuth: []
       parameters:
         - name: cartId
           in: path
@@ -141,6 +156,8 @@ paths:
     post:
       summary: "Create a new category"
       description: "Creates a new category if it does not already exist"
+      security:
+        - BearerAuth: []
       parameters:
         - name: categoryName
           in: path
@@ -156,6 +173,8 @@ paths:
     post:
       summary: "Create a new child category"
       description: "Creates a new child category under the specified parent category"
+      security:
+        - BearerAuth: []
       parameters:
         - name: parentCategoryName
           in: path
@@ -177,6 +196,8 @@ paths:
     get:
       summary: "Get all parents categories"
       description: "Returns a list of all parents categories"
+      security:
+        - BearerAuth: []
       responses:
         '200':
           description: "List of catalogs"
@@ -185,6 +206,8 @@ paths:
     get:
       summary: "Get all child categories of a category"
       description: "Returns all child categories of the specified category"
+      security:
+        - BearerAuth: []
       parameters:
         - name: categoryName
           in: path
@@ -200,6 +223,8 @@ paths:
     get:
       summary: "Get products in category"
       description: "Returns all products in the specified category"
+      security:
+        - BearerAuth: []
       parameters:
         - name: categoryName
           in: path
@@ -216,6 +241,8 @@ paths:
     post:
       summary: "Create a new product"
       description: "Creates a new product with the given details"
+      security:
+        - BearerAuth: []
       requestBody:
         required: true
         content:
@@ -230,6 +257,8 @@ paths:
     post:
       summary: "Change product stock quantity"
       description: "Changes the stock quantity of a product by id"
+      security:
+        - BearerAuth: []
       parameters:
         - name: productId
           in: path
@@ -259,6 +288,8 @@ paths:
     post:
       summary: "Reduce product stock quantity"
       description: "Reduces the stock quantity of a product by id"
+      security:
+        - BearerAuth: []
       parameters:
         - name: productId
           in: path
@@ -284,8 +315,8 @@ paths:
         '200':
           description: "Product stock reduced"
 
-  # UserController
-  /user/create:
+  # Auth and User Controller
+  /auth/register-user:
     post:
       summary: "Create a new user"
       description: "Creates a new user with the given details"
@@ -294,10 +325,50 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/UserDto"
+              $ref: "#/components/schemas/RegisterRequestDto"
       responses:
         '200':
           description: "User created"
+
+  /auth/login:
+    post:
+      summary: "User login"
+      description: "Logs in a user with the given credentials"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/AuthRequestDto"
+      responses:
+        '200':
+          description: "User login"
+
+  /auth/change-role/{userId}:
+    post:
+      summary: "Change user role"
+      description: "Changes the role of a user by id"
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: string
+            example: "d26af0f0-32a2-4f27-acf8-8816a5ae41c9"
+      requestBody:
+        required: true
+        description: "New role of the user"
+        content:
+          application/json:
+            schema:
+              type: string
+              example: "ADMIN"
+      responses:
+        '200':
+          description: "User role changed"
+
 
   #Bank
   /bank/create/bank-account:
@@ -408,6 +479,8 @@ paths:
     post:
       summary: "Add a new payment method"
       description: "Adds a payment method (e.g. card) for the specified user"
+      security:
+        - BearerAuth: []
       parameters:
         - name: userId
           in: path
@@ -447,6 +520,8 @@ paths:
     get:
       summary: "Get all available user payment methods"
       description: "Retrieves all payment methods for a specific user"
+      security:
+        - BearerAuth: []
       parameters:
         - name: userId
           in: path
@@ -463,6 +538,8 @@ paths:
     post:
       summary: "Process a payment transaction"
       description: "Processes a payment transaction using the provided details"
+      security:
+        - BearerAuth: []
       parameters:
         - name: orderId
           in: path
@@ -482,6 +559,12 @@ paths:
 
 # Регистрируем схемы для DTO
 components:
+  securitySchemes:
+    BearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+
   schemas:
     ProductDto:
       type: object
@@ -526,4 +609,63 @@ components:
           type: string
           example: +1234567890
           description: "User phone number"
+
+    RegisterRequestDto:
+      type: object
+      properties:
+        username:
+          type: string
+          example: "Oleg Olegov"
+          description: "User full name"
+          minLength: 3
+          maxLength: 50
+          x-constraints:
+            - type: NotBlank
+              message: "Username must not be blank"
+        email:
+          type: string
+          example: "oleg@gmail.com"
+          description: "User email"
+          x-constraints:
+            - type: Unique
+              message: "Email must be unique"
+            - type: NotBlank
+              message: "Email must not be blank"
+        phoneNumber:
+          type: string
+          example: "+1234567890"
+          description: "User phone number"
+          x-constraints:
+            - type: NotBlank
+              message: "Phone number must not be blank"
+            - type: Unique
+              message: "Phone number must be unique"
+        password:
+          type: string
+          example: "password123"
+          description: "User password"
+        role:
+          type: string
+          example: "USER"
+          description: "User role"
+          x-constraints:
+            - type: NotBlank
+              message: "Role must not be blank"
+
+    AuthRequestDto:
+      type: object
+      properties:
+        username:
+          type: string
+          example: "oleg@gmail.com"
+          description: "User email or phone number"
+          x-constraints:
+            - type: NotBlank
+              message: "Username must not be blank"
+        password:
+          type: string
+          example: "password123"
+          description: "User password"
+
+
 
